CHANGES IN VERSION 1.36.0
-----------------------

NEW FEATURES

    o Source package directories that include an `inst/doc` folder with files
    are now flagged with an error. `doc` folders are generated during
    `R CMD build`.
    o The error for packages already hosted on CRAN has been converted to a
    warning (@lshep, #177). Any such incoming packages must be removed from CRAN
    before the following Bioconductor release.

BUG FIXES AND MINOR IMPROVEMENTS

    o Obtain a more complete list of deprecated packages for
    `checkDeprecatedPkgs`
    o Fix issue with path seperators on Windows ('\\' vs '/') causing the unit
    test for `getBiocCheckDir` to report erroneous mismatches (@grimbough, #175)
    o Fix bug where the wrong number of functions with length greater than 50
    was reported (@grimbough, #182)
    o biocViews term suggestions should be a scalar character (@lcolladotor,
    #184)

CHANGES IN VERSION 1.34
-----------------------

NEW FEATURES

    o Redundant package dependencies checks between `DESCRIPTION` and
    `NAMESPACE` have been removed. These are already present in `R CMD check`
    as "checking package dependencies".
    o Use `callr` to run `BiocCheck` in a separate process, this avoids
    interference with loaded packages (@vjcitn, #158)

BUG FIXES AND MINOR IMPROVEMENTS

    o Update `checkVigInstalls` and `checkVigBiocInst` to avoid false positives
    (@almeidasilvaf, #170).
    o Only count non evaluated chunks when there are any present in the
    vignette
    o Fix false positive WARNING "Import {pkg} in NAMESPACE as well as
    DESCRIPTION." where pkg was not in NAMESPACE but it was used using double
    colons pkg::function inside an S4 method. (@zeehio, #166)
    o Fix bug where inputs to `getDirFile` were vectors in
    `checkForValueSection` (@zeehio, #163)
    o Allow lookback for matching T/F and exclude list elements, e.g., `list$F`
    (@lshep, #161)